syntax = "proto3";
package v1;
option go_package = ".;v1";

import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message User{
    int64 id = 1;
    string name = 2;
}

message LoginRequest{
    string name =1;
}

message LoginResponse{
    int64 id =1;
}

message MessageRequest{
    int64 from_user_id = 1;
    int64 to_user_id = 2;
    string message = 3;
    google.protobuf.Timestamp active_at = 4 [(gogoproto.stdtime) = true];
}

message MessageResponse{}

message ListUsersRequest{}
message ListUsersResponse{
    repeated User users = 1;
}

service ChatService{
    rpc Login(LoginRequest) returns (LoginResponse){}
    rpc Message(stream MessageRequest) returns (stream MessageResponse){}
    rpc List(ListUsersRequest) returns (ListUsersResponse){}
}

